<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo_entregador_ifood"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_seus_dados_pessoais"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="25sp"
        android:textColor="@color/corSubTexto"
        android:gravity="center"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:hint="@string/nome"
        android:textSize="20sp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/edit_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        android:textSize="20sp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edit_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:textSize="20sp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_marginTop="20dp"/>
    <CheckBox
        android:id="@+id/cbx_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Txt_termoUso"
        android:layout_marginTop="15dp"
        android:checked="false"/>
</LinearLayout>